ensure header button is visible on hover

--- a/css/style.css
+++ b/css/style.css
@@ -4689,6 +4689,9 @@ p.media__subheading {
 a:hover .nav-link__value, a:focus .nav-link__value {
 	color: #006800;
 }
+.module--dark a.btn:hover .nav-link__value, .module--dark a.btn:focus .nav-link__value {
+	color: #006800;
+}
 .module--dark a:hover .nav-link__value, a:focus .nav-link__value {
 	color: #FFF;
 }
